Changelog
=========

3.4.1
-----

* use ckeditor 3.4.1
  macadames 10/09/26

3.4
---

* use ckeditor 3.4

3.3.1b
------

* use ckeditor 3.3.1
  macadames 10/07/31

* icon for control panel is now in controlpanel.xml
  macadames 10/07/31

* Make control panel (and tests) running without errors with last Plone4 version ... 
  The listTypesForInterface method was broken.
  macadames 10/07/31

* Use the new mediaupload attribute in collective.plonefinder
  (Force the selection of content-type in jquery.uploadify)
  macadames 10/07/31

* Added support for z3c.autoinclude so no zcml slugs will be needed for this package. 
  sneridagh 10/08/05

3.2.1b
------

* image sizes selection added (use this new option provided by collective.plonefinder)

* some fixes for last collective.plonefinder usage.

3.2.1a
------

* use ckeditor 3.2.1

* plone 4 compliance :

  - remove iw.resourcetraverser dependency

  - remove wysiwyg_support in skin (no more useful)

* control panel improvements

* functional doctests added or improved

* FAQ added

* buildout examples added to help developers using svn product

* javascript contextuel config is now packed

* added local field widget settings overload

* changed portal_transforms resolveuid

* all basehref problems fixed

* menu styles through control panel finished

* toolbar through control panel finished 

3.0.2 - Unreleased
------------------

* use ckeditor 3.0.2


3.0 - Unreleased
----------------

* Initial release
